--- a/src/app/navigation/savings-account-table/savings-account-table.component.html
+++ b/src/app/navigation/savings-account-table/savings-account-table.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="space-between center">
   <mat-form-field fxFlex="50%">
-    <mat-label>Filter</mat-label>
+    <mat-label>{{'Navigation.SavingAccount.Filter'| translate }}</mat-label>
     <input matInput (keyup)="applyFilter($event.target.value)">
   </mat-form-field>
   <button mat-raised-button color="primary" (click)="toggleClosed()">
@@ -11,22 +11,22 @@
 <table mat-table [dataSource]="dataSource" matSort>
 
   <ng-container matColumnDef="accountNo">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Number </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.SavingAccount.accountNo'| translate }} </th>
     <td mat-cell *matCellDef="let savingsAccount">{{ savingsAccount.accountNo }}</td>
   </ng-container>
 
   <ng-container matColumnDef="productName">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Savings Account </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.SavingAccount.productName'| translate }} </th>
     <td mat-cell *matCellDef="let savingsAccount">{{ savingsAccount.productName }}</td>
   </ng-container>
 
   <ng-container matColumnDef="accountBalance">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Balance </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.SavingAccount.Balance'| translate }} </th>
     <td mat-cell *matCellDef="let savingsAccount">{{ savingsAccount.accountBalance | money }}</td>
   </ng-container>
 
   <ng-container matColumnDef="Status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
+    <th mat-header-cell *matHeaderCellDef> {{'Navigation.SavingAccount.Status'| translate }} </th>
     <td mat-cell *matCellDef="let savingsAccount">
       <span [className]="savingsAccount.status.code | statusLookup">
         <fa-icon matTooltip="{{ savingsAccount.status.value }}" matTooltipPosition="right" icon="circle" size="md"></fa-icon>
