--- a/src/app/navigation/client-navigation/client-navigation.component.html
+++ b/src/app/navigation/client-navigation/client-navigation.component.html
@@ -4,7 +4,7 @@
     <div class="mat-typography">
       <mat-card-title>
         <h2>
-          {{ clientData.displayName }} 
+          {{ clientData.displayName }}
           <span [className]="clientData.status.code | statusLookup">
             <fa-icon matTooltip="{{ clientData.status.value }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
           </span>
@@ -12,11 +12,11 @@
       </mat-card-title>
       <mat-card-subtitle>
         <p>
-          Account No: {{ clientData.accountNo }} {{ clientData.externalId ? '| External ID: ' + clientData.externalId : '' }}
+          {{'Navigation.Client.accountNo'| translate }}{{ clientData.accountNo }} {{ clientData.externalId ? '| External ID: ' + clientData.externalId : '' }}
         </p>
       </mat-card-subtitle>
     </div>
-  </mat-card-title-group>      
+  </mat-card-title-group>
 </mat-card-header>
 
 <mat-card-content>
@@ -27,7 +27,7 @@
       <div fxLayout="row wrap" class="content">
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="clientData.firstName">
-          First Name
+          {{'Navigation.Client.firstName'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="clientData.firstName">
@@ -35,7 +35,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="clientData.middleName">
-          Middle Name
+          {{'Navigation.Client.middleName'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="clientData.middleName">
@@ -43,15 +43,15 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="clientData.lastName">
-          Last Name
+          {{'Navigation.Client.lastName'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="clientData.lastName">
           {{ clientData.lastName }}
         </div>
-        
+
         <div fxFlex="50%" class="mat-body-strong" *ngIf="clientData.dateOfBirth">
-          Date of Birth
+          {{'Navigation.Client.dateOfBirth'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="clientData.dateOfBirth">
@@ -59,7 +59,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="clientData.mobileNo">
-          Mobile Number
+          {{'Navigation.Client.mobileNo'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="clientData.mobileNo">
@@ -67,7 +67,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Activation Date
+          {{'Navigation.Client.activationDate'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -75,7 +75,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="clientData.officeName">
-          Associated Office
+          {{'Navigation.Client.officeName'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="clientData.officeName">
@@ -83,7 +83,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="clientData.staffName">
-          Associated Staff
+          {{'Navigation.Client.staffName'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="clientData.staffName">
