--- a/src/app/navigation/group-navigation/group-navigation.component.html
+++ b/src/app/navigation/group-navigation/group-navigation.component.html
@@ -4,7 +4,7 @@
     <div class="mat-typography">
       <mat-card-title>
         <h2>
-          {{ groupData.name }} 
+          {{ groupData.name }}
           <span [className]="groupData.status.code | statusLookup">
             <fa-icon matTooltip="{{ groupData.status.value }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
           </span>
@@ -12,11 +12,11 @@
       </mat-card-title>
       <mat-card-subtitle>
         <p>
-          Account No: {{ groupData.accountNo }} {{ groupData.externalId ? '| External ID: ' + groupData.externalId : '' }}
+          {{'Navigation.Group.accountNo'| translate }}{{ groupData.accountNo }} {{ groupData.externalId ? '| External ID: ' + groupData.externalId : '' }}
         </p>
       </mat-card-subtitle>
     </div>
-  </mat-card-title-group>      
+  </mat-card-title-group>
 </mat-card-header>
 
 <mat-card-content>
@@ -25,49 +25,49 @@
         <div fxLayout="row wrap" class="content">
 
           <div fxFlex="50%" class="mat-body-strong">
-            Activation Date
+            {{'Navigation.Group.activationDate'| translate }}
           </div>
-  
+
           <div fxFlex="50%">
             {{ groupData.activationDate | date }}
           </div>
 
           <div fxFlex="50%" class="mat-body-strong">
-            Associated Officer
+            {{'Navigation.Group.staffName'| translate }}
           </div>
-  
+
           <div fxFlex="50%">
             {{ groupData.staffName }}
           </div>
 
           <div fxFlex="50%" class="mat-body-strong" *ngIf="groupData.centerName">
-            Associated Center
+            {{'Navigation.Group.centerName'| translate }}
           </div>
-  
+
           <div fxFlex="50%" *ngIf="groupData.centerName">
             {{ groupData.centerName }}
           </div>
 
           <div fxFlex="50%" class="mat-body-strong" *ngIf="groupData.collectionMeetingCalendar && groupData.collectionMeetingCalendar.nextTenRecurringDates[0]">
-            Next Meeting Date
+            {{'Navigation.Group.nextTenRecurringDates'| translate }}
           </div>
-  
+
           <div fxFlex="50%" *ngIf="groupData.collectionMeetingCalendar && groupData.collectionMeetingCalendar.nextTenRecurringDates[0]">
             {{ groupData.collectionMeetingCalendar.nextTenRecurringDates[0] | date }}
           </div>
 
           <div fxFlex="50%" class="mat-body-strong" *ngIf="groupData.collectionMeetingCalendar && groupData.collectionMeetingCalendar.humanReadable">
-            Meeting Frequency
+            {{'Navigation.Group.humanReadable'| translate }}
           </div>
-  
+
           <div fxFlex="50%" *ngIf="groupData.collectionMeetingCalendar && groupData.collectionMeetingCalendar.humanReadable">
             {{ groupData.collectionMeetingCalendar.humanReadable }}
           </div>
 
           <div fxFlex="50%" class="mat-body-strong">
-            Number of Clients
+            {{'Navigation.Group.length'| translate }}
           </div>
-  
+
           <div fxFlex="50%">
             {{ clientData ? clientData.length : '' }}
           </div>
