--- a/src/app/navigation/member-groups/member-groups.component.html
+++ b/src/app/navigation/member-groups/member-groups.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row">
   <mat-form-field fxFlex="50%">
-    <mat-label>Filter</mat-label>
+    <mat-label>{{'Navigation.MemberGroup.Filter'| translate }}</mat-label>
     <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
 </div>
@@ -8,12 +8,12 @@
 <table mat-table [dataSource]="dataSource" matSort>
 
   <ng-container matColumnDef="accountNo">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Number </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.MemberGroup.accountNo'| translate }} </th>
     <td mat-cell *matCellDef="let memberGroup"> {{ memberGroup.accountNo }} </td>
   </ng-container>
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Group Name </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.MemberGroup.name'| translate }} </th>
     <td mat-cell *matCellDef="let memberGroup"> {{ memberGroup.name }} </td>
   </ng-container>
 
