--- a/src/app/navigation/share-account-table/share-account-table.component.html
+++ b/src/app/navigation/share-account-table/share-account-table.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="space-between center">
   <mat-form-field fxFlex="50%">
-    <mat-label>Filter</mat-label>
+    <mat-label>{{'Navigation.ShareAccount.Filter'| translate }}</mat-label>
     <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
   <button mat-raised-button color="primary" (click)="toggleClosed()">
@@ -11,22 +11,22 @@
 <table mat-table [dataSource]="dataSource" matSort>
 
   <ng-container matColumnDef="accountNo">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Number </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.ShareAccount.accountNo'| translate }} </th>
     <td mat-cell *matCellDef="let shareAccount">{{ shareAccount.accountNo }}</td>
   </ng-container>
 
   <ng-container matColumnDef="productName">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Share Account </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.ShareAccount.productName'| translate }} </th>
     <td mat-cell *matCellDef="let shareAccount">{{ shareAccount.productName }}</td>
   </ng-container>
 
   <ng-container matColumnDef="totalApprovedShares">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Approved Shares </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Navigation.ShareAccount.totalApprovedShares'| translate }} </th>
     <td mat-cell *matCellDef="let savingsAccount">{{ savingsAccount.totalApprovedShares }}</td>
   </ng-container>
 
   <ng-container matColumnDef="Status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
+    <th mat-header-cell *matHeaderCellDef> {{'Navigation.ShareAccount.Status'| translate }} </th>
     <td mat-cell *matCellDef="let shareAccount">
       <span [className]="shareAccount.status.code | statusLookup">
         <fa-icon matTooltip="{{ shareAccount.status.value }}" matTooltipPosition="right" icon="circle" size="1x"></fa-icon>
