--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,5 +1,5 @@
   <div id="particles-js"></div>
   <div class="text">
-    <h1 id="title">404</h1>
-    <p id="subtitle">Something went wrong.</p>
+    <h1 id="title">{{'NotFound.404'| translate }}</h1>
+    <p id="subtitle">{{'NotFound.alert'| translate }}</p>
   </div>
